fix width overflow

--- a/css/styles-archive.css
+++ b/css/styles-archive.css
@@ -152,7 +152,7 @@ h2.stardate {
   opacity: 0.9;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1600px) {
   .archive {
     padding-left: 15%;
   }
